Instale QRCode inicie componente Contáctanos,agregue etiquetas meta para el SEO

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/Logo-ViajeSeguro.png" />
-    
+
+    <meta name="description" content="Reserva tu transporte público en Colombia. Encuentra rutas, horarios y vehículos confiables y seguros para grupos de 4 a 19 pasajeros.¡Reserva ahora!">
+
+    <meta name="keywords" content="transporte público Colombia, transporte público intermunicipal Colombia, cómo reservar transporte público en línea Colombia, Reservar vehiculos transporte público Colombia, alquiler de vans para grupos Colombia, alquiler de vans para grupos de 15 personas Colombia, transporte seguro Colombia, transporte público seguro para grupos Colombia">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ViajeSeguro - Tu Sitio de Transporte</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
-
+    
+    <title>Transporte público en Colombia | Reserva tu vehículo | Confiable y seguro</title>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
 
